kqed/src/objects/Relationship_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Relationships and their reverse relationships</description>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reverse_Relationship_Type__c</fullName>
        <label>Reverse Relationship Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TA_Relationship_Type_Id__c</fullName>
        <externalId>true</externalId>
        <label>TA Relationship Type Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Relationship Type</label>
</CustomObject>